[package]
name = "bolt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.4"
ed25519-dalek-blake3 = "1.0.11"
num-bigint = "0.4.6"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
