[package]
name = "object-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.4"
ed25519-dalek-blake3 = "1.0.11"
hex = "0.4.3"
num-bigint = "0.4.6"
sha2 = "0.10.8"
wasmer = { version = "4.4.0", no-default-features = true, features = ["sys", "singlepass"] }
wasmer-middlewares = "4.4.0"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }

[dev-dependencies]
rand = "0.8.5"
